Fixed an overflow bug. Added mode-specific CSS style for Firefox.

--- a/src/devtools/views/Components/Tree.css
+++ b/src/devtools/views/Components/Tree.css
@@ -28,7 +28,7 @@
 
 .AutoSizerWrapper {
   width: 100%;
-  overflow: auto;
+  overflow: hidden;
   flex: 1 0 auto;
 }
 .AutoSizerWrapper:focus {
